drop down behind iframe fix

--- a/app/assets/stylesheets/home_pages.css.scss
+++ b/app/assets/stylesheets/home_pages.css.scss
@@ -66,6 +66,7 @@ body#home_pages-controller {
 			height: 380px;
 			background-image: url("home_page/trailer_bg.png");
 			background-repeat: repeat-y;
+			z-index: 10;
 			
 			#trailer-wrapper {
 				padding-top: 5px;
